--- a/23/23_10.md
+++ b/23/23_10.md
@@ -13,7 +13,7 @@
 ### From Knowledge Distillation to Self-Knowledge Distillation: A Unified Approach with Normalized Loss and Customized Soft Labels
 >http://arxiv.org/abs/2303.13005
 
-![img](/img\23-10-1.png)
+![img](/img/23-10-1.png)
 
 ```
 DKD的自蒸馏版
@@ -38,7 +38,7 @@ DKD的自蒸馏版
 ### Efficient One Pass Self-distillation with Zipf's Label Smoothing
 >http://arxiv.org/abs/2207.12980
 
-![Alt text](/img\23-10-2.png)
+![img](/img/23-10-2.png)
 ```
 齐夫定律是哈佛大学语言学家乔治·齐夫（George Zipf）1949年发现的一个实验定律，即在自然语言里，一个单词出现的频率与它在频率表里的排序成反比。
 ```
