--- a/23/23_10.md
+++ b/23/23_10.md
@@ -2,9 +2,9 @@
 ## Paper List
 1. From Knowledge Distillation to Self-Knowledge Distillation: A Unified Approach with Normalized Loss and Customized Soft Labels
 2. Efficient One Pass Self-distillation with Zipf's Label Smoothing
-3. 
-4. 
-
+3. Linearity Grafting: Relaxed Neuron Pruning Helps Certifiable Robustness
+4. On the Integration of Self-Attention and Convolution
+5. 
 
 
 
@@ -52,4 +52,35 @@ DKD的自蒸馏版
 将图像的空间属性和概率挂钩是否合理?小目标,密集目标
 和注意力结合来改进?
 对没出现的类别给予恒定的分布值是否合理?
+```
+
+## 10.16-17
+### Linearity Grafting: Relaxed Neuron Pruning Helps Certifiable Robustness
+>http://arxiv.org/abs/2206.07839
+
+![img](/img/23-10-3.png)
+
+```
+可验证鲁棒
+对relu线性化，等效替代成wx+b的形式，对不重要的激活层用线性函数代替
+灵感来源于剪枝策略，剪枝等价于斜率为0的线性函数，用来减少验证的非线性
+
+relate：
+pruning and robustness
+```
+
+### On the Integration of Self-Attention and Convolution
+>http://arxiv.org/abs/2111.14556
+
+![img](/img/23-10-4.png)
+```
+整合了cnn和self-attention操作一体化模型，通过超参数合并输出，计算成本小
+整体框架：
+- 一阶段共用卷积特征，二阶段的额外计算开销小
+- 卷积特征对卷积核等价拆解为1*1卷积通过移位操作合并
+- 自注意力通过--Stand-Alone Self-Attention in Vision Models提出的自注意力方法计算
+ 
+消融实验：
+- 自注意力起到更大的作用，且直观来看加上卷积后提升不大，并且组合的方式影响不大
+- 早期卷积带来更大提升，后期自注意力作用更大
 ```
