--- a/23/23_10.md
+++ b/23/23_10.md
@@ -4,7 +4,7 @@
 2. Efficient One Pass Self-distillation with Zipf's Label Smoothing
 3. Linearity Grafting: Relaxed Neuron Pruning Helps Certifiable Robustness
 4. On the Integration of Self-Attention and Convolution
-5. 
+5. Stand-Alone Self-Attention in Vision Models
 
 
 
@@ -83,4 +83,20 @@ pruning and robustness
 消融实验：
 - 自注意力起到更大的作用，且直观来看加上卷积后提升不大，并且组合的方式影响不大
 - 早期卷积带来更大提升，后期自注意力作用更大
+```
+
+## 10.18
+### Stand-Alone Self-Attention in Vision Models
+>http://arxiv.org/abs/1906.05909
+
+![img](/img/23-10-5.png)
+```
+self attention
+出发点：对于卷积模型无法作用于长距离的特征建模，在大感受野方面的缩放特性较差
+
+相关工作：non_local,'Attention Augmented Convolutional Networks','Local Relation Networks'
+
+全局的注意力需要极大的计算量，本文仅在局部空间计算attention，取代传统CNN
+通过2d卷积分别计算出qkv，经过softmax后和value计算加权和逐像素得到输出结果（类似卷积），下采样通过2*2池化进行。
+编码： 相对编码>绝对编码>无编码
 ```
