--- a/23/23_10.md
+++ b/23/23_10.md
@@ -5,6 +5,9 @@
 3. Linearity Grafting: Relaxed Neuron Pruning Helps Certifiable Robustness
 4. On the Integration of Self-Attention and Convolution
 5. Stand-Alone Self-Attention in Vision Models
+6. Local Relation Networks for Image Recognition
+7. Syntax-Aware Network for Handwritten Mathematical Expression Recognition
+8. 
 
 
 
@@ -99,4 +102,36 @@ self attention
 全局的注意力需要极大的计算量，本文仅在局部空间计算attention，取代传统CNN
 通过2d卷积分别计算出qkv，经过softmax后和value计算加权和逐像素得到输出结果（类似卷积），下采样通过2*2池化进行。
 编码： 相对编码>绝对编码>无编码
+```
+
+## 10.24
+### Local Relation Networks for Image Recognition
+>http://arxiv.org/abs/1904.11491
+
+![img](/img/23-10-6.png)
+```
+卷积的一种替代
+- 对大卷积核计算更加高效
+- 对抗攻击更加稳健，受益于空间域的相关性组合
+```
+
+## 10.27
+### Syntax-Aware Network for Handwritten Mathematical Expression Recognition
+>http://arxiv.org/abs/2203.01601
+
+![img](/img/23-10-7.png)
+```
+经典树解码的公式识别论文，再DWAP-TD树解码基础上包含两点改进：
+1. 优化了树解码的语法约束（主要贡献）
+    - 论文申明公式识别的主要难点在于语法关系而不是符号识别(质疑，badcase很多字符混淆)，本文拆解公式为不同组件减轻难度
+2. 优化注意力方式
+    - 基于树的遍历路线计算覆盖注意力而不是用传统方法计算所有的，避免注意力漂移
+    - 反向解码器预测父节点，本质是注意力的自纠正，推理阶段忽略
+
+改进方向：
+- 优化树解码
+    - 简化相邻符号个数，例如：上、右上，左上（较少出现）合并为一种
+    - 优化相对关系，图神经网络
+- 强化视觉特征
+- 基于树的数据增强
 ```
