--- a/23/23_10.md
+++ b/23/23_10.md
@@ -7,7 +7,10 @@
 5. Stand-Alone Self-Attention in Vision Models
 6. Local Relation Networks for Image Recognition
 7. Syntax-Aware Network for Handwritten Mathematical Expression Recognition
-8. 
+8. Localizing Moments in Video with Natural Language
+9. 
+10. 
+11. 
 
 
 
@@ -134,4 +137,21 @@ self attention
     - 优化相对关系，图神经网络
 - 强化视觉特征
 - 基于树的数据增强
+```
+
+## 10.28
+### Localizing Moments in Video with Natural Language
+>http://arxiv.org/abs/1708.01641
+
+![img](/img/23-10-8.png)
+```
+视频检索特点：没法通过动作、对象、属性唯一地标识某一时刻，因此只管表示方法使用自然原语本地化视频时刻
+    相对性的概念需要考虑时间上下文,而不是简单的场景检索
+
+视觉特征:
+ 全局特征:提取高级特征然后特定时间段内池化
+ 局部特征:汇聚特定时间段特征
+ 时间信息:候选时间段转化为区间
+损失函数:ranking loss,度量学习 ?
+文章总结:难以处理复杂语言场景,存在长尾分布
 ```
